refactor: Lines createLines 메서드의 역할을 of 메서드로 위임