@@ -4,6 +4,7 @@ import ladder.dto.LineResult;
 
 import java.util.List;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.util.Collections.unmodifiableList;
@@ -16,13 +17,9 @@ public class Lines {
     }
 
     public static Lines of(final Supplier<Boolean> generator, final int ladderHeight, final int personCount) {
-        return new Lines(createLines(generator, ladderHeight, personCount));
-    }
-
-    private static List<Line> createLines(final Supplier<Boolean> generator, final int ladderHeight, final int personCount) {
         return IntStream.rangeClosed(1, ladderHeight)
                 .mapToObj(i -> new Line(generator, personCount))
-                .toList();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), Lines::new));
     }
 
     public List<Line> getLines() {
